--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
           <div>
             <label for="email">Email:</label>
-            <input type="email" id="email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+" size="30" required>
+            <input type="email" id="email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+" size="30" placeholder="abc@xyz.com" required>
           </div>
           <div>
             <label for="phone">Phone #:</label>
@@ -30,7 +30,6 @@
               id="phone"
               type="text"
               name="phone"
-              pattern="\d{3}[\-]\d{3}[\-]\d{4}"
               placeholder="xxx-xxx-xxxx"
             >
           </div>
